--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@babel/core": "^7.24.3",
     "buffer": "^6.0.3",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.38",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.3"
   },
   "dependencies": {
     "axios": "^1.6.8",
