--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0"
   },
   "browserslist": [
